# Veltix

./: .gitignore  404.html  AGENTS.md  AI.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  bench.json  benchmark.py  commit.sh  fix.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  release.sh  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.vltxbench/: README.md
.vltxbench/profiles/: default.toml  threading-bench.toml
Veltix/: __init__.py  exceptions.py
Veltix/client/: client.py
Veltix/network/: request.py  sender.py  system_types.py  types.py
Veltix/server/: server.py
Veltix/utils/: binding.py  network.py
api/callback_executor/: index.html
api/client/: index.html
api/exceptions/: index.html
api/handshake_handler/: index.html
api/logger/: index.html
api/request/: index.html
api/request_handler/: index.html
api/sender/: index.html
api/server/: index.html
api/socket/: index.html
api/types/: index.html
api/utils/: index.html
changelog/: index.html
client/: socket_handler_client.py
crypto/: ChaCha20_handler.py  aes_handler.py
docs/: changelog.md  index.md
docs/api/: callback_executor.md  client.md  exceptions.md  handshake_handler.md  logger.md  request.md  request_handler.md  sender.md  server.md  socket.md  types.md  utils.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: advanced.md  callbacks.md  client.md  logger.md  messages.md  migration.md  reconnect.md  routing.md  server.md
examples/: chat_client.py  chat_server.py  echo_client.py  echo_server.py  hello.py  logger_example.py  ping.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/advanced/: index.html
guides/callbacks/: index.html
guides/client/: index.html
guides/logger/: index.html
guides/messages/: index.html
guides/migration/: index.html
guides/reconnect/: index.html
guides/routing/: index.html
guides/server/: index.html
network/: requests_handler.py
plans/v1.8.0-v1.9.0-roadmap/: index.html
rust/message-buffer/: Cargo.toml  pyproject.toml
rust/message-buffer/src/: binding.rs  lib.rs
rust/message-buffer/src/protocol/: error.rs  mod.rs
scripts/: commit.sh  fix.sh  release.sh  rm_pycache.sh
search/: search_index.json
server/: socket_handler_server.py
src/veltix/: __init__.py
src/veltix/benchmark/: __init__.py  cli.py  compare.py  config.py  display.py  export.py  models.py
src/veltix/benchmark/benches/: __init__.py  (+4 more)
src/veltix/client/: client.py  config.py  disconnect.py  reconnect_handler.py
src/veltix/handler/: callback_executor.py  handshake_handler.py  request_handler.py  rules.py  rules_manager.py
src/veltix/internal/: buffer_size.py  bus.py  compatibility.py  events.py  network.py  version.py
src/veltix/logger/: __init__.py  config.py  core.py  formatter.py  levels.py  writer.py
src/veltix/network/: constants.py  id_allocator.py  message_buffer.py  parser.py  request.py  response.py  sender.py  system_types.py
src/veltix/server/: client_info.py  config.py  server.py
src/veltix/socket_core/: async_socket.py  base_socket.py  core.py  threading_socket.py
src/veltix/utils/: encoding.py  format_size.py
storage/: atomic.py  storage_handler.py
tests/: basic_test_client.py  basic_test_server.py  conftest.py  pytest.ini  test_basic.py  test_benchmark.py  test_callback_executor.py  test_client_server.py  test_client_tags.py  test_clients_manager.py  test_compatibility.py  test_comprehensive.py  test_error_handling.py  test_handshake.py  test_id_system.py  test_logger.py  test_logger_detail.py  test_message_buffer.py  test_message_type.py  test_network_internal.py  test_ping_pong.py  test_protocol.py  test_reconnect.py  test_request.py  test_response.py  test_routing.py  test_rules_unit.py  test_send_and_wait.py  test_sender.py  test_server_advanced.py  test_socket_core.py  test_socket_core_unit.py  test_utils.py  test_writer.py
utils/: unit_converter.py  veltix_exceptions.py
veltix/: __init__.py  benchmark.py  exceptions.py
veltix/_vendor/avyra/: __init__.py
veltix/benchmark/: __init__.py  __main__.py  _cmp.py  _info.py  _list.py  benchmark.py  cli.py  display.py  export.py  init.py  models.py  profile.py  runner.py  utils.py
veltix/benchmark/benches/: burst.py  fps.py  latency.py  memory.py  stress.py
veltix/client/: client.py  config.py  reconnect_handler.py  socket_handler_client.py
veltix/crypto/: aes_handler.py  crypto_handler.py  ed25519_handler.py  rsa_handler.py  x25519_handler.py
veltix/handler/: callback_executor.py  handshake_handler.py  request_handler.py  rules.py  rules_manager.py
veltix/internal/: buffer_size.py  bus.py  compatibility.py  events.py  mode.py  network.py  performance_mode.py
veltix/logger/: __init__.py  config.py  core.py  formatter.py  levels.py  writer.py
veltix/network/: constants.py  flags.py  id_allocator.py  message_buffer.py  network_handler.py  parser.py  request.py  requests_handler.py  response.py  sender.py  system_types.py  types.py
veltix/server/: client_info.py  config.py  server.py  socket_handler_server.py
veltix/socket/: base_socket.py  core.py  threading_socket.py
veltix/socket_core/: async_socket.py  base_socket.py  core.py  threading_socket.py
veltix/socket_core/managers/: clients_manager.py
veltix/storage/: storage_handler.py
veltix/utils/: encoding.py  events.py  format_size.py  network.py  performance_mode.py  veltix_exceptions.py
(+6 files in other folders)
