[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veltix"
version = "1.0.0"
description = "The networking library you always wanted"
authors = [
    { name = "Nytrox", email = "nytrox.dev@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "networking",
    "tcp",
    "protocol",
    "binary",
    "socket",
    "server",
    "client",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/NytroxDev/Veltix"
Repository = "https://github.com/NytroxDev/Veltix"
Issues = "https://github.com/NytroxDev/Veltix/issues"

[tool.setuptools]
packages = ["Veltix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]